src/test/ui/type-alias-impl-trait/self-referential-4.stderr
error[E0277]: can't compare `&i32` with `Bar<'b, 'static>`
  --> $DIR/self-referential-4.rs:6:5
   |
LL |     i
   |     ^ no implementation for `&i32 == Bar<'b, 'static>`
   |
   = help: the trait `PartialEq<Bar<'b, 'static>>` is not implemented for `&i32`

error[E0277]: can't compare `&i32` with `Foo<'static, 'b>`
  --> $DIR/self-referential-4.rs:12:5
   |
LL |     i
   |     ^ no implementation for `&i32 == Foo<'static, 'b>`
   |
   = help: the trait `PartialEq<Foo<'static, 'b>>` is not implemented for `&i32`

error[E0277]: can't compare `&i32` with `Moo<'static, 'a>`
  --> $DIR/self-referential-4.rs:18:5
   |
LL |     i
   |     ^ no implementation for `&i32 == Moo<'static, 'a>`
   |
   = help: the trait `PartialEq<Moo<'static, 'a>>` is not implemented for `&i32`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
